// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should respond to destination query 1`] = `
Object {
  "data": Object {
    "destination": Object {
      "_id": 3,
      "beachDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
      "beachRating": 0,
      "countryEn": "Japan",
      "foodDescription": "Quisque scelerisque congue magna a vestibulum. Donec sed tincidunt purus",
      "foodRating": 2,
      "iata": "NGO",
      "museumDescription": "Ut tempor ex vel eleifend lobortis. Nunc vel tortor odio",
      "museumRating": 1,
      "name": Array [
        "Nagoya",
        "Нагоя",
        "名古屋市",
        "NGO",
        "NKM",
      ],
      "nameEn": "Nagoya",
      "natureDescription": "Ut tempor ex vel eleifend lobortis. Nunc vel tortor odio",
      "natureRating": 1,
      "shoppingDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
      "shoppingRating": 4,
    },
  },
}
`;

exports[`should respond to destinationRating with all parameters passed 1`] = `
Object {
  "data": Object {
    "destinationRating": Array [
      Object {
        "_id": 5,
        "beachDescription": "Ut tempor ex vel eleifend lobortis. Nunc vel tortor odio",
        "beachRating": 3,
        "countryEn": "Japan",
        "foodDescription": "Proin pharetra ante est, eget convallis magna tempor id. Etiam vitae aliquet massa",
        "foodRating": 4,
        "iata": "NGS",
        "museumDescription": "Pellentesque eu leo sed urna mattis suscipit eu eu tortor. Praesent auctor quam eu ex tristique pretium",
        "museumRating": 4,
        "name": Array [
          "Nagasaki",
          "Нагасаки",
          "長崎市",
          "NGS",
        ],
        "nameEn": "Nagasaki",
        "natureDescription": "Pellentesque eu leo sed urna mattis suscipit eu eu tortor. Praesent auctor quam eu ex tristique pretium",
        "natureRating": 5,
        "nightlifeDescription": "Quisque scelerisque congue magna a vestibulum. Donec sed tincidunt purus",
        "nightlifeRating": 5,
        "shoppingDescription": "Ut tempor ex vel eleifend lobortis. Nunc vel tortor odio",
        "shoppingRating": 3,
      },
    ],
  },
}
`;

exports[`should respond to destinationStartsWith query with lowercase letter 1`] = `
Object {
  "data": Object {
    "destinationStartsWith": Array [
      Object {
        "_id": 1,
        "countryEn": "Japan",
        "iata": "OSA",
        "name": Array [
          "Osaka",
          "Осака",
          "大阪市",
          "KIX",
          "OSA",
          "ITM",
        ],
        "nameEn": "Osaka",
      },
      Object {
        "_id": 4,
        "countryEn": "Japan",
        "iata": "SPK",
        "name": Array [
          "Sapporo",
          "Саппоро",
          "札幌市",
          "SPK",
          "CTS",
          "OKD",
        ],
        "nameEn": "Sapporo",
      },
    ],
  },
}
`;

exports[`should respond to originStartsWith query with lowercase letter 1`] = `
Object {
  "data": Object {
    "originStartsWith": Array [
      Object {
        "_id": 1,
        "countryEn": "Japan",
        "iata": "TYO",
        "name": Array [
          "Tokyo",
          "東京",
          "Токио",
          "TYO",
          "NRT",
          "HND",
        ],
        "nameEn": "Tokyo",
      },
    ],
  },
}
`;

exports[`should respond to travel query 1`] = `
Object {
  "data": Object {
    "travel": Object {
      "_id": "5bbce95f81e97acfcd8e0a76",
      "date": "2019-07-07",
      "destination": Object {
        "_id": 1,
        "countryEn": "Japan",
        "nameEn": "Osaka",
      },
      "priceAirplane": 53,
      "priceHotel": 75,
    },
  },
}
`;

exports[`should respond to travelFull query 1`] = `
Object {
  "data": Object {
    "travelFull": Object {
      "_id": "5bbce95f81e97acfcd8e0a76",
      "date": "2018-10-24",
      "destination": Object {
        "_id": 1,
        "countryEn": "Japan",
        "nameEn": "Osaka",
      },
      "origin": Object {
        "nameEn": "Osaka",
      },
      "priceAirplane": 53,
      "priceHotel": 25,
    },
  },
}
`;

exports[`should return "Unauthorized" for query without token 1`] = `
Object {
  "data": Object {
    "getNotifications": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 2,
          "line": 1,
        },
      ],
      "message": "Unauthorized",
      "path": Array [
        "getNotifications",
      ],
    },
  ],
}
`;

exports[`should return current user info 1`] = `
Object {
  "data": Object {
    "currentUser": Object {
      "email": "test@mail.com",
      "name": "Alex",
    },
  },
}
`;

exports[`should return getNotifications for authorized user 1`] = `
Object {
  "data": Object {
    "getNotifications": Array [
      Object {
        "date": "2019-08-09",
        "destination": Object {
          "nameEn": "Osaka",
        },
        "origin": Object {
          "nameEn": "Tokyo",
        },
        "priceAirplaneLast": null,
        "priceHotelLast": 75,
        "travelId": "5c6c7e42e3b7e1edb974a40c",
      },
    ],
  },
}
`;
